# TradingFramework

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  app_2main_8cpp.html  classutils_1_1expected.html  conanfile.py  connector__contract_8hpp.html  connector__controller_8cpp.html  connector__controller_8hpp.html  connector__tinkoff_8cpp.html  connector__tinkoff_8hpp.html  dir_226cab507aec4758ba30f289382a6253.html  dir_361898d03ae3cb58056ee2cf20f54b82.html  dir_388e02ded3a48b4fcdba349086d43499.html  dir_4012036b817d7a27b3db54aaad5f39ab.html  dir_424fc95170722768e38560d84f5900bb.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_55183d5f00fc38f7e5fea0f44992c77c.html  dir_6a63ce49392b0e408893f7b3c5f1cad9.html  dir_736ca95615e32e2db8d008201c1eccd6.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d7636e2e715f9d1bf31b71d841bd3552.html  dir_ef3b2545113449f8f25e623a543d64e3.html  dir_f5d2cd48efd1de7a0b8116dd9f90342e.html  dir_f804fdea2dd533ad3f31aca93a12ed8b.html  files.html  index.html  interaction_2telegram_2app_2main_8cpp.html  interaction__contract_8hpp.html  interaction__controller_8cpp.html  interaction__controller_8hpp.html  (+31 more)
.github/scripts/: conan-ci-setup.sh
.github/workflows/: analyzers.yml  ci.yml
cmake/: conan_provider.cmake  coverage.cmake  coverage_impl.cmake  dependencies.cmake  dev-mode.cmake  rename_tinkoff_protobufs.cmake  variables.cmake
source/: CMakeLists.txt
source/app/: CMakeLists.txt  main.cpp
source/connector/: CMakeLists.txt
source/connector/contract/: CMakeLists.txt  connector_contract.hpp
source/connector/controller/: CMakeLists.txt  connector_controller.cpp  connector_controller.hpp
source/connector/tinkoff/: CMakeLists.txt  connector_tinkoff.cpp  connector_tinkoff.hpp
source/interaction/: CMakeLists.txt
source/interaction/contract/: CMakeLists.txt  interaction_contract.hpp
source/interaction/controller/: CMakeLists.txt  interaction_controller.cpp  interaction_controller.hpp
source/interaction/telegram/: CMakeLists.txt  interaction_telegram.cpp  interaction_telegram.hpp
source/interaction/telegram/app/: CMakeLists.txt  main.cpp
source/interaction/telegram/impl/: CMakeLists.txt  interaction_telegram_impl.cpp  interaction_telegram_impl.hpp
source/interaction/telegram/ut/: CMakeLists.txt  interaction_telegram_ut.cpp
source/utils/: CMakeLists.txt  utils.hpp
test/: CMakeLists.txt
test/source/: TradingFramework_test.cpp
